# twelve_factor_app_concepts

./: .flake8  LICENSE  Procfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
contrib/: env-sample
djangoproject/: settings.py  urls.py
djangoproject/base/: admin.py  apps.py  models.py  urls.py  views.py
djangoproject/base/migrations/: 0001_initial.py
djangoproject/base/static/css/: style.css
djangoproject/base/templates/base/: home.html
djangoproject/base/tests/: test_home.py
source/djangoproject/: settings.py
