[tool.poetry]
name = "rousuy"
version = "0.1.0"
description = "Twelve Factor App Concepts"
authors = ["Rodrigo Usuy <rousuy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
