[tool.poetry]
name = "rousuy"
version = "0.1.0"
description = "Twelve Factor App Concepts"
authors = ["Rodrigo Usuy <rousuy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
