[tool.poetry]
name = "rousuy"
version = "0.1.0"
description = "Twelve Factor App Concepts"
authors = ["Rodrigo Usuy <rousuy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
gunicorn = "^20.1.0"
python-decouple = "^3.6"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
django-s3-folder-storage = "^0.5"
Collectfast = "^2.2.0"
django-debug-toolbar = "^3.2.4"
sentry-sdk = "^1.5.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
codecov = "^2.1.12"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
